# locally-modulated-ds

./: .dir-locals.el  .gitignore  CMakeLists.txt  Doxyfile  README.md  dependencies.rosinstall  package.xml
include/locally_modulated_ds/: gp_modulated_ds.h  gp_modulated_ds.hxx  linear_velocity_fields.h  locally_modulated_ds.h  na_locally_modulated_ds.h  spline.h  spline_modulated_ds.h
include/snippet_gpmds/: snippet.h  snippet.hxx  snippet_gpmds.h
src/: run_snippet_gpmds.cpp  snippet_gpmds.cpp  spline.cpp  spline_modulated_ds.cpp
test/: R162z.txt  R45z.txt  R_test_case_234.txt  test_gp_modulated_ds.cpp  test_locally_modulated_ds.cpp  test_snippet.cpp  test_snippet_gpmds.cpp  test_spline_modulated_ds.cpp
